[gd_scene load_steps=11 format=3 uid="uid://b5mjgreg8l3ap"]

[ext_resource type="Script" uid="uid://o0f20sinybbj" path="res://scripts/building.gd" id="1_gof7m"]
[ext_resource type="Resource" uid="uid://cn6kon66bh7gm" path="res://resources/building/merger.tres" id="2_g3pb6"]
[ext_resource type="PackedScene" uid="uid://cpedi8rmqle25" path="res://scenes/connection_gate.tscn" id="3_8lqx8"]
[ext_resource type="Script" uid="uid://d37e4wlqbw6gr" path="res://scripts/buffer.gd" id="4_iwd2d"]
[ext_resource type="TileSet" uid="uid://cbb4sityyi4us" path="res://tileset/tileset.tres" id="5_7huw0"]
[ext_resource type="Texture2D" uid="uid://cogn2e21kqel" path="res://sprites/pivot_debug.png" id="6_blq7k"]
[ext_resource type="Script" uid="uid://f53i8e6t5r1k" path="res://scripts/connection_manager.gd" id="7_nm462"]
[ext_resource type="FontFile" uid="uid://c6h3we4j2dvbf" path="res://fonts/GravityBold8.ttf" id="9_8lqx8"]
[ext_resource type="Script" uid="uid://ca0xmej764gid" path="res://scripts/ui/building_ui.gd" id="9_iwd2d"]

[sub_resource type="LabelSettings" id="LabelSettings_mkjfx"]
font_size = 1

[node name="Building" type="Area2D"]
y_sort_enabled = true
script = ExtResource("1_gof7m")
building_resource = ExtResource("2_g3pb6")
connection_scene = ExtResource("3_8lqx8")
ground_size = Vector2i(2, 1)
show_connection_indicators = true
current_production_percentage = -1.0

[node name="InputBuffer" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_iwd2d")
metadata/_custom_type_script = "uid://d37e4wlqbw6gr"

[node name="OutputBuffer" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_iwd2d")
metadata/_custom_type_script = "uid://d37e4wlqbw6gr"

[node name="ConnectionIndicators" type="TileMapLayer" parent="."]
unique_name_in_owner = true
position = Vector2(0, -16)
tile_map_data = PackedByteArray(0, 0, 1, 0, 1, 0, 2, 0, 10, 0, 5, 0, 0, 0, 0, 0, 255, 255, 2, 0, 10, 0, 5, 0, 0, 0, 1, 0, 255, 255, 2, 0, 10, 0, 5, 0, 0, 0)
tile_set = ExtResource("5_7huw0")
collision_enabled = false
navigation_enabled = false

[node name="Background" type="TileMapLayer" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(0, -16)
tile_map_data = PackedByteArray(0, 0, 0, 0, 0, 0, 2, 0, 12, 0, 4, 0, 0, 0)
tile_set = ExtResource("5_7huw0")
collision_enabled = false
navigation_enabled = false

[node name="Foreground" type="TileMapLayer" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(0, -16)
tile_set = ExtResource("5_7huw0")
collision_enabled = false
navigation_enabled = false

[node name="PivotDebug" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
scale = Vector2(2, 2)
texture = ExtResource("6_blq7k")

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_top = -13.0
offset_right = 16.0
offset_bottom = 3.0
text = "<Resource#-9223369708479100369>"
label_settings = SubResource("LabelSettings_mkjfx")
horizontal_alignment = 1

[node name="ShapeCollisionPolygon2D" type="CollisionPolygon2D" parent="."]
unique_name_in_owner = true
position = Vector2(8, -8)
polygon = PackedVector2Array(-8, -12, -8, 8, 24, 8, 24, -12, -8, -12)
disabled = true

[node name="GroundCollisionPolygon2D" type="CollisionPolygon2D" parent="."]
unique_name_in_owner = true
position = Vector2(8, -8)
polygon = PackedVector2Array(-4, -4, -4, 4, 20, 4, 20, -4)

[node name="Inputs" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -16)
script = ExtResource("7_nm462")

[node name="Outputs" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -16)
script = ExtResource("7_nm462")

[node name="BuildingUi" type="Control" parent="."]
unique_name_in_owner = true
z_index = 2
layout_mode = 3
anchors_preset = 0
offset_right = 85.0
offset_bottom = 46.0
size_flags_horizontal = 3
script = ExtResource("9_iwd2d")

[node name="PanelContainer" type="PanelContainer" parent="BuildingUi"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 74.0
offset_bottom = 40.0
theme_type_variation = &"BuildingPanel"

[node name="MarginContainer" type="MarginContainer" parent="BuildingUi/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="BuildingUi/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BuildingNameLabel" type="Label" parent="BuildingUi/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.19215687, 0.16078432, 0.28235295, 1)
theme_override_fonts/font = ExtResource("9_8lqx8")
theme_override_font_sizes/font_size = 6
text = "building name"

[node name="UiComponents" type="VBoxContainer" parent="BuildingUi/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="child_entered_tree" from="Inputs" to="." method="_on_inputs_child_entered_tree"]
